build_error_cli.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   F:\Aether\crates\aether-node\Cargo.toml
workspace: F:\Aether\Cargo.toml
warning: unused import: `futures::StreamExt`
   --> crates\aether-core\src\provider.rs:236:13
    |
236 | ...se futures::StreamExt;
    |       ^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `aether-core` (lib) generated 1 warning
   Compiling aether-ai v0.1.0 (F:\Aether\crates\aether-ai)
error[E0046]: not all trait items implemented, missing: `generate_stream`
   --> crates\aether-ai\src\anthropic.rs:117:1
    |
117 | impl AiProvider for AnthropicProvider {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `generate_stream` in implementation
    |
    = help: implement the missing item: `fn generate_stream(&self, _: GenerationRequest) -> Pin<Box<(dyn Stream<Item = Result<StreamResponse, AetherError>> + std::marker::Send + 'static)>> { todo!() }`

error[E0046]: not all trait items implemented, missing: `generate_stream`
   --> crates\aether-ai\src\ollama.rs:106:1
    |
106 | impl AiProvider for OllamaProvider {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `generate_stream` in implementation
    |
    = help: implement the missing item: `fn generate_stream(&self, _: GenerationRequest) -> Pin<Box<(dyn Stream<Item = Result<StreamResponse, AetherError>> + std::marker::Send + 'static)>> { todo!() }`

error[E0046]: not all trait items implemented, missing: `generate_stream`
   --> crates\aether-ai\src\gemini.rs:131:1
    |
131 | impl AiProvider for GeminiProvider {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `generate_stream` in implementation
    |
    = help: implement the missing item: `fn generate_stream(&self, _: GenerationRequest) -> Pin<Box<(dyn Stream<Item = Result<StreamResponse, AetherError>> + std::marker::Send + 'static)>> { todo!() }`

error[E0063]: missing field `stream` in initializer of `ChatRequest`
   --> crates\aether-ai\src\openai.rs:159:27
    |
159 |         let api_request = ChatRequest {
    |                           ^^^^^^^^^^^ missing `stream`

warning: unused variable: `p`
  --> crates\aether-ai\src\lib.rs:74:16
   |
74 |         Ok(mut p) => {
   |                ^ help: if this is intentional, prefix it with an underscore: `_p`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> crates\aether-ai\src\lib.rs:74:12
   |
74 |         Ok(mut p) => {
   |            ----^
   |            |
   |            help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0046, E0063.
For more information about an error, try `rustc --explain E0046`.
warning: `aether-ai` (lib) generated 2 warnings
error: could not compile `aether-ai` (lib) due to 4 previous errors; 2 warnings emitted
